--- a/www/src/index.html
+++ b/www/src/index.html
@@ -14,8 +14,8 @@
     <!-- <script src="" async defer></script> -->
   </head>
   <body>
-    <div>
-      <span class="cagematch">cagematch</span> is coming soon
+    <div class="teaser">
+      <span class="lightPurple">cagematch</span> is coming soon
     </div>
   </body>
 </html>
