--- a/www/pwResetTemplate.html
+++ b/www/pwResetTemplate.html
@@ -110,7 +110,7 @@ u + .em_body .em_full_wrap { width:100% !important; width:100vw !important;}
                 <td height="25" style="height:25px;" class="em_h20">&nbsp;</td>
               </tr>
               <tr>
-                <td color="#E1E1E1" align="center" valign="top"><a href="http://www.cagematch.xyz" target="_blank" style="color:#E1E1E1;text-decoration:none;">cagematch</a></td>
+                <td color="#E1E1E1" align="center" valign="top"><a href="http://www.cagematch.xyz" target="_blank" style="color:#E1E1E1;text-decoration:none;font-size: 22px;">cagematch</a></td>
               </tr>
               <tr>
                 <td height="28" style="height:28px;" class="em_h20">&nbsp;</td>
@@ -122,7 +122,7 @@ u + .em_body .em_full_wrap { width:100% !important; width:100vw !important;}
       </td>
     </tr>
 </table>
-<table width="100%" border="0" cellspacing="0" cellpadding="0" class="em_full_wrap" align="center" bgcolor="#121212">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" class="em_full_wrap" align="center" bgcolor="#121212" style="margin-bottom: 200px;">
     <tr>
       <td align="center" valign="top" class="em_aside5"><table align="center" width="650" border="0" cellspacing="0" cellpadding="0" class="em_main_table" style="width:650px; table-layout:fixed;">
           <tr>
